--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'home/styles/home.css' %}">
   </head>
   <body>
-    <main>
+    <main id="home">
       <div class="wrap">
         <div class="bg-video">
             <video autoplay muted loop playsinline src="{% static 'home/images/bg.mp4' %}"></video>
@@ -19,11 +19,10 @@
         <nav>
           <h1>Carlos Cerqueira</h1>
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Habilidades</a></li>
-            <li><a href="">Projetos</a></li>
-            <li><a href="">Contato</a></li>
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#projetos">Projetos</a></li>
+            <li><a href="#contato">Contato</a></li>
           </ul>
         </nav>
   
@@ -43,7 +42,7 @@
       </div> 
     </main>
 
-    <section class="sobre">
+    <section class="sobre" id="sobre">
       <img src="{% static 'home/images/fotoPerfil.svg' %}" alt="Carlos Cerqueira" class="foto-perfil">
       <p>Profissional em desenvolvimento web e mobile com experiência em Django, React, React Native, Angular, Python, TypeScript, MongoDB, SQLite e MySQL, além de ferramentas como Figma, Notion e Trello.</p>
 
@@ -70,7 +69,7 @@
       </div>
     </section>
 
-    <section class="projetos">
+    <section class="projetos" id="projetos">
       <section class="msg">
         <div class="msg-wrapper">
           <h1>Este portfólio é uma extensão do meu trabalho: claro, funcional e orientado a resultados.</h1>
@@ -174,7 +173,7 @@
       </div>
     </section>
 
-    <section class="experiencia">
+    <section class="experiencia" id="contato">
       <h1>Experiência Profissional</h1>
       <div class="item-container">
         <div class="item instituicao">
@@ -230,6 +229,18 @@
     </footer>
 
     <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        document.querySelectorAll("nav a[href^='#']").forEach(anchor => {
+          anchor.addEventListener("click", function (e) {
+            e.preventDefault();
+            const target = document.querySelector(this.getAttribute("href"));
+            if (target) {
+              target.scrollIntoView({ behavior: "smooth" });
+            }
+          });
+        });
+      });
+      
       function setRealVH() {
         const height = window.visualViewport ? window.visualViewport.height : window.innerHeight;
         const vh = height * 0.01;
